--- a/Saga FateStayNight/FateStayNight Movie Heaven's Feel/index.html
+++ b/Saga FateStayNight/FateStayNight Movie Heaven's Feel/index.html
@@ -26,10 +26,9 @@
                 <div class="episode-list">
                     <h3>Lista de Episodios</h3>
                     <ul>
-                        <li>Fate/stay night: Heaven’s Feel I. presage flower</li>
-                        <li>Fate/stay night: Heaven’s Feel II. lost butterfly</li>
-                        <li>Fate/stay night: Heaven’s Feel III. spring song</li>
-                        <!-- Agrega más elementos de lista según sea necesario -->
+    <li><a href="CAPS/index1.html">Fate/stay night: Heaven’s Feel I. presage flower</a></li>
+    <li><a href="CAPS/index2.html">Fate/stay night: Heaven’s Feel II. lost butterfly</a></li>
+    <li><a href="CAPS/index3.html">Fate/stay night: Heaven’s Feel III. spring song</a></li>
                     </ul>
                 </div>
             </div>
