--- a/Saga FateStayNight/FateStayNight Movie Heaven's Feel/CAPS/Index1.html
+++ b/Saga FateStayNight/FateStayNight Movie Heaven's Feel/CAPS/Index1.html
@@ -22,8 +22,8 @@
                 <iframe src="https://filemoon.sx/e/30ytvfl67kaz/VID_20240720_110933_212" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="640" height="360" allowfullscreen></iframe>
             </div>
             <div class="buttons-container">
-                <button class="prev"><a href="index1.html">&#9664;</a></button>
-                <button class="next"><a href="index2.html">&#9654;</a></button>
+                <button class="prev"><a href="Index1.html">&#9664;</a></button>
+                <button class="next"><a href="Index2.html">&#9654;</a></button>
             </div>
         </div>
     </section>
