--- a/Saga FateStayNight/FateStayNight Movie Heaven's Feel/CAPS/Index3.html
+++ b/Saga FateStayNight/FateStayNight Movie Heaven's Feel/CAPS/Index3.html
@@ -22,8 +22,8 @@
                <iframe src="https://filemoon.sx/e/vsx0iozfp92x/VID_20240722_104459_962" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="640" height="360" allowfullscreen></iframe>
             </div>
             <div class="buttons-container">
-                <button class="prev"><a href="index1.html">&#9664;</a></button>
-                <button class="next"><a href="index2.html">&#9654;</a></button>
+                <button class="prev"><a href="Index2.html">&#9664;</a></button>
+                <button class="next"><a href="Index3.html">&#9654;</a></button>
             </div>
         </div>
     </section>
