--- a/AvisoLegal.html
+++ b/AvisoLegal.html
@@ -81,7 +81,7 @@
         <p>Todas las marcas aquí mencionadas y logos están registrados por sus legítimos propietarios y solamente se emplean en referencia a las mismas y con un fin de cita o comentario, de acuerdo con el artículo 32 LPI.</p>
         <p>No nos hacemos responsables del uso indebido que puedas hacer del contenido de nuestra página.</p>
         <p>Todo el contenido ha sido exclusivamente sacado de sitios públicos de Internet, por lo que este material es considerado de libre distribución. En ningún artículo legal se menciona la prohibición de material libre por lo que esta página no infringe en ningún caso la ley. Si alguien tiene alguna duda o problema al respecto, no dude en ponerse en contacto con nosotros.</p>
-        <p>En ningún caso o circunstancia se podrá responsabilizar directamente o indirectamente al propietario ni a los colaboradores de EDGYS-SITE del ilícito uso de la información contenida en edgys-site.pl. Así mismo tampoco se nos podrá responsabilizar directamente o indirectamente del incorrecto uso o mala interpretación que se haga de la información y servicios incluidos. Igualmente quedará fuera de nuestra responsabilidad el material al que usted pueda acceder desde nuestros enlaces.</p>
+        <p>En ningún caso o circunstancia se podrá responsabilizar directamente o indirectamente al propietario ni a los colaboradores de EDGYS-SITE del ilícito uso de la información contenida en https://finalrest.github.io/EDGYS-SITE/. Así mismo tampoco se nos podrá responsabilizar directamente o indirectamente del incorrecto uso o mala interpretación que se haga de la información y servicios incluidos. Igualmente quedará fuera de nuestra responsabilidad el material al que usted pueda acceder desde nuestros enlaces.</p>
     </div>
     
 </body>
