--- a/Monogatari Series/Nisemonogatari/index.html
+++ b/Monogatari Series/Nisemonogatari/index.html
@@ -32,14 +32,13 @@
                             <li><a href="CAPS/index3.html">3. Karen Abeja, Parte 3</a></li>
                             <li><a href="CAPS/index4.html">4. Karen Abeja, Parte 4</a></li>
                             <li><a href="CAPS/index5.html">5. Karen Abeja, Parte 5</a></li>
-                            <li><a href="CAPS/index6.html">6. Tsukihi Fénix, Parte 1</a></li>
-                            <li><a href="CAPS/index7.html">7. Tsukihi Fénix, Parte 2</a></li>
-                            <li><a href="CAPS/index8.html">8. Tsukihi Fénix, Parte 3</a></li>
-                            <li><a href="CAPS/index9.html">9. Tsukihi Fénix, Parte 4</a></li>
-                            <li><a href="CAPS/index10.html">10. Tsukihi Fénix, Parte 5</a></li>
-                            <li><a href="CAPS/index11.html">11. Tsukihi Fénix, Parte 6</a></li>
-                        
-                    </ul>
+                            <li><a href="CAPS/index6.html">6. Karen Abeja, Parte 6</a></li>
+                            <li><a href="CAPS/index7.html">7. Karen Abeja, Parte 7</a></li>
+                            <li><a href="CAPS/index8.html">8. Tsukihi Fenix, Parte 1</a></li>
+                            <li><a href="CAPS/index9.html">9. Tsukihi Fenix, Parte 2</a></li>
+                           <li><a href="CAPS/index10.html">10. Tsukihi Fenix, Parte 3</a></li>
+                           <li><a href="CAPS/index11.html">11. Tsukihi Fenix, Parte 4</a></li>
+                        </ul>
                 </div>
             </div>
         </div>
