--- a/Mushoku/Primera Temporada/CAPS/index23.html
+++ b/Mushoku/Primera Temporada/CAPS/index23.html
@@ -15,7 +15,7 @@
 
     <section class="content">
         <div class="video-description-container">
-             <class="description-box">
+             <div class="description-box">
                 <p>Reflexion</p>
             </div>
             <div class="video-frame">
