--- a/Saga FateStayNight/FateStrangeFake/Cap1/index.html
+++ b/Saga FateStayNight/FateStrangeFake/Cap1/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EDGYS SITE</title>
-     <link rel="icon" href="https://raw.githubusercontent.com/FinalRest/EDGYS-SITE/main/favicon/favicon.ico" type="image/x-icon">
+    <title>EDGYS SITE - Strange Fake</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/FinalRest/EDGYS-SITE/main/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>EDGYS SITE</h1>
-        <a href="https://finalrest.github.io/EDGYS-SITE/Saga%20FateStayNight/FateStrangeFake/index.html" class="btn-return">REGRESAR</a>
+        <a href="https://finalrest.github.io/EDGYS-SITE/Monogatari%20Series/Bakemonogatari/index.html" class="btn-return">REGRESAR</a>
     </header>
-
     <section class="content">
         <div class="video-description-container">
-            <div class="video-frame">
-                <iframe src="https://mega.nz/embed/Ar0CjK7R#9EOu8pzNW0_RcoO0kBIEyAPNymH3yqACzMT1T2KKJAg" width="640" height="480" allow="autoplay" allowfullscreen></iframe>
-            </div>
             <div class="description-box">
-                <p>Hechiceros y espíritus heroicos se congregan en un escenario apócrifo. Son conscientes de que se encuentran frente a una Falsa Guerra del Santo Grial, y a pesar de ello, continúan danzando sobre el tablado. La autenticidad es algo lejano de otro mundo.</p>
+                <p>🗣Todos contra todos.</p>
+            </div>
+            <div class="video-frame">
+                <video controls playsinline style="max-width: 100%; max-height: 100%;">
+                    <source src="https://pixeldrain.com/api/file/yBVyMNFc" type="video/mp4" />
+                </video>
+            <div class="buttons-container">
+                <button class="prev" disabled>&#9664;</button>
+                <button class="next"><a href="index2.html">&#9654;</a></button>
             </div>
         </div>
     </section>
