--- a/Saga FateStayNight/FateStrangeFake/index.html
+++ b/Saga FateStayNight/FateStrangeFake/index.html
@@ -28,6 +28,7 @@
                     <ul>
 
                         <li><a href="https://finalrest.github.io/EDGYS-SITE/Saga%20FateStayNight/FateStrangeFake/Cap1/index.html" class="custom-link">Fate/strange Fake - Whispers of Dawn -</a></li>
+                        <li><a href="https://finalrest.github.io/EDGYS-SITE/Saga%20FateStayNight/FateStrangeFake/Cap1/index2.html" class="custom-link">The Heroic Spirit Incident</a></li>
                         <!-- Agrega más elementos de lista según sea necesari -->
                     </ul>
                 </div>
