--- a/Saga FateStayNight/FateStrangeFake/Cap1/index2.html
+++ b/Saga FateStayNight/FateStrangeFake/Cap1/index2.html
@@ -22,7 +22,7 @@
                     <source src="https://pixeldrain.com/api/file/MoKS6mVQ" type="video/mp4" />
                 </video>
             <div class="buttons-container">
-                <button class="prev"><a href="index1.html">&#9664;</button>
+                <button class="prev"><a href="index.html">&#9664;</button>
                 <button class="next"><a href="index2.html">&#9654;</a></button>
             </div>
         </div>
